--- a/index.html
+++ b/index.html
@@ -4,8 +4,95 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Achivement</title>
+    <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css" />
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="first_section">
+        <div class="first_img_pc">
+            <img src="img\株式会社Achievement_PC (ヒーローセクション).jpg" alt="">
+        </div>
+        <div class="first_img_sp">
+            <img src="img\株式会社Achievement_SP (ヒーローセクション).jpg" alt="">
+        </div>
+    </div>
+    <div class="second_section">
+        <div class="second_belt">
+            <img src="img\border_a.png" alt="">
+            <div class="CTA_btn">
+                <a href="" class="CTA_btn_letter">
+                    無料個別相談のご予約はこちら
+                </a>
+            </div>
+        </div>
+    </div>
+    <div class="third_section">
+        <div class="third_title">
+            <p class="title_line"></p>
+            <p class="third_title_letter">無料個別相談のメリット</p>
+            <p class="title_line"></p>
+        </div>
+        <div class="third_block">
+            <img src="img\24730664.png" class="third_img_sp">
+            <div class="third_description">
+                <p class="third_block_title">老後の不足金額を正確に把握</p>
+                <p class="third_block_detail">
+                    正確に不足金額を把握し、準備完了の期限が明確になることで、どの手段でどれだけの資産計算をすればよいかが分かります。
+                    すべての不安は「知らないこと」から始まるため、正しい情報を知れば過度に恐れる必要はなくなります。
+                </p>
+            </div>
+            <img src="img\24730664.png" class="third_img_pc">
+        </div>
+        <p class="tihrd_partition"></p>
+        <div class="third_block">
+            <img src="img\26198142.png" class="third_img_sp">
+            <img src="img\26198142.png" class="third_img_pc">
+            <div class="third_description">
+                <p class="third_block_title">資産形成のプランニング<br>（稼ぐ・守る・増やす）</p>
+                <p class="third_block_detail">
+                    資産形成には「稼ぐ」「守る」「増やす」という３つの分野があります。<br>
+                    まずは、今のあなたにとって最適な取り組み方を見極め、明確な道筋を立ててプランニングをします。特に重要なのは「お金を守る」こと。
+                </p>
+            </div>
+        </div>
+    </div>
+    <div class="fourth_section">
+        <div class="fourth_title">
+            <p class="title_line"></p>
+            <p class="fourth_title_letter">なぜ資産形成が必要なの？</p>
+            <p class="title_line"></p>
+        </div>
+        <div class="fourth_discription">
+            <p class="fourth_discription_title">2019年に話題となった<span class="sp_break_41"></span>「老後2,000万円不足問題」</p>
+            <p class="fourth_discription_detail">しかし、実際に計算してみると、必要な金額は<span class="sp_break"></span>2,000万円を大きく上回るケースがほとんどです。 <span class="sp_break42"></span>その理由は、老後資金の計算方法自体に<span class="sp_break"></span>見落としや誤りがあるからです。</p>
+        </div>
+        <div class="fourth_imges_sp">
+            <img src="img\top_img_sp.jpg" alt="">
+            <img src="img\middle_img_sp.jpg" alt="">
+            <img src="img\bottom_img_sp.jpg" alt="">
+        </div>
+        <div class="fourth_imges_pc">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+        </div>
+        <div class="fourth_comment">
+            <p>老後資金の不足額は人それぞれ。 <span class="sp_break"></span>まずはあなた自身の<span class="sp_break_43"></span>「正確な資産形成」が必要です。</p>
+            <img src="img\22080810.png" alt="">
+        </div>
+    </div>
+    <div class="fifth_section">
+        <div class="fifth_belt">
+            <div class="fith_title">
+                <p>ご相談では、あなたのライフプランや<span class="sp_break_52"></span>ご希望に沿って、<span class="sp_break_51"></span>不足額を一緒に計算し、<span class="sp_break_52"></span>具体的な資産形成プランをご提案します。</p>
+            </div>
+            <img src="img\border_a.png" alt="">
+            <div class="fifth_btn CTA_btn">
+                <a href="" class="CTA_btn_letter">
+                    無料個別相談のご予約はこちら
+                </a>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
