--- a/index.html
+++ b/index.html
@@ -94,5 +94,41 @@
             </div>
         </div>
     </div>
+    <div class="sixth_section">
+        <div class="sixth_title">
+            <p class="title_line"></p>
+            <p class="sixth_title_letter">こんなお悩みありませんか？</p>
+            <p class="title_line"></p>
+        </div>
+        <div class="sixth_contents">
+            <img src="img\sixth_img_sp.jpg" class="sixth_img_sp">
+            <img src="img\sixth_img_pc.jpg" class="sixth_img_pc">
+            <p>まずは「知る」から。<span class="sp_break_61"></span>今の自分を知ることで、<span class="sp_break_612"></span>未来の安心が見えてきます。</p>
+        </div>
+        <div class="sixth_discription">
+            <p class="sixth_discription_title">資産形成のプロが、あなたの不安や<span class="sp_break_62"></span>疑問を解消しながら、</p>
+            <p class="sixth_discription_detail">一人ひとりに合った<span class="sp_break_63"></span><span class="sixth_highlight">「資産形成プラン」</span><span class="sp_break_631"></span>を一緒に作成します。</p>
+            <img src="img\24005251.png">
+        </div>
+    </div>
+    <div class="seventh_section">
+        <div class="seventh_title">
+            <p class="title_line"></p>
+            <p class="seventth_title_letter">相談を受けたお客様の声</p>
+            <p class="title_line"></p>
+        </div>
+        <div class="seventh_contents">
+            <img src="img\seventh_img_sp.jpg" class="seventh_img_sp">
+            <img src="img\seventh_img_pc.jpg" class="seventh_img_pc">
+            <img src="img\矢印.png" class="seventh_img_arrow">
+        </div>
+    </div>
+    <div class="eighth_section">
+        <div class="eighth_title">
+            <p class="title_line"></p>
+            <p class="eighth_title_letter">なぜ、 相談後こんなに変化がでるの？</p>
+            <p class="title_line"></p>
+        </div>
+    </div>
 </body>
 </html>
