--- a/index.html
+++ b/index.html
@@ -129,6 +129,12 @@
             <p class="eighth_title_letter">なぜ、 相談後こんなに変化がでるの？</p>
             <p class="title_line"></p>
         </div>
+        <div class="eighth_contents">
+            <p class="eighth_contetns_1">弊社では源泉徴収票の見方から<span class="sp_break_81"></span>しっかり学んでもらって、<span class="sp_break_82"></span>自身で効果について理解し<span class="sp_break_81"></span>検討してもらえるようになります。</p>
+            <div class="eighth_contents_2">
+
+            </div>
+        </div>
     </div>
 </body>
 </html>
