eight-途中768以降の

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Achivement</title>
     <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css" />
     <link rel="stylesheet" href="style.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Zen+Kaku+Gothic+Antique:wght@900&display=swap');
+    </style>
 </head>
 <body>
     <div class="first_section">
@@ -126,14 +129,26 @@
     <div class="eighth_section">
         <div class="eighth_title">
             <p class="title_line"></p>
-            <p class="eighth_title_letter">なぜ、 相談後こんなに変化がでるの？</p>
+            <p class="eighth_title_letter">なぜ、<span class="sp_break_86"></span>相談後こんなに変化がでるの？</p>
             <p class="title_line"></p>
         </div>
         <div class="eighth_contents">
             <p class="eighth_contetns_1">弊社では源泉徴収票の見方から<span class="sp_break_81"></span>しっかり学んでもらって、<span class="sp_break_82"></span>自身で効果について理解し<span class="sp_break_81"></span>検討してもらえるようになります。</p>
             <div class="eighth_contents_2">
-
+                <div class="eighth_contents_21">
+                    <img src="img\レ点.png" alt="">
+                    <p>所得税と住民税のお支払い額の把握</p>
+                </div>
+                <div class="eighth_contents_21">
+                    <img src="img\レ点.png" alt="">
+                    <p>隠れた税金の計算式の理解</p>
+                </div>
+                <div class="eighth_contents_21">
+                    <img src="img\レ点.png" alt="">
+                    <p>総合課税という日本の税制度から<span class="sp_break_88"></span>会社員でも活用できる節税方法の検討</p>
+                </div>
             </div>
+            <p class="eighth_contents_3">これらを一緒に学んでいきます。<span class="sp_break_83 sp_break_831"></span>節税などの【仕組み】を活用して<span class="sp_break_84"></span>支出を減らすことで、<span class="sp_break_87"></span>最終的に投資を行った際、<span class="sp_break_83 sp_break_832"></span>万が一損失が出たとしても、<span class="sp_break_83"></span>もともと手元にあったお金ではなく、<span class="sp_break_85"></span>税金などで支出していたお金を利用しているため、<span class="sp_break_84"></span>リスクを大幅に低減できます。</p>
         </div>
     </div>
 </body>
