--- a/index.html
+++ b/index.html
@@ -73,11 +73,10 @@
             <img src="img\top_img_sp.jpg" alt="">
             <img src="img\middle_img_sp.jpg" alt="">
             <img src="img\bottom_img_sp.jpg" alt="">
+            
         </div>
         <div class="fourth_imges_pc">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
+            <img src="img\fourth_img_pc.png" alt="">
         </div>
         <div class="fourth_comment">
             <p>老後資金の不足額は人それぞれ。 <span class="sp_break"></span>まずはあなた自身の<span class="sp_break_43"></span>「正確な資産形成」が必要です。</p>
@@ -136,20 +135,46 @@
             <p class="eighth_contetns_1">弊社では源泉徴収票の見方から<span class="sp_break_81"></span>しっかり学んでもらって、<span class="sp_break_82"></span>自身で効果について理解し<span class="sp_break_81"></span>検討してもらえるようになります。</p>
             <div class="eighth_contents_2">
                 <div class="eighth_contents_21">
-                    <img src="img\レ点.png" alt="">
-                    <p>所得税と住民税のお支払い額の把握</p>
+                    <img src="img\レ点.png">
+                    <div class="eighth_wrap">
+                        <p>所得税と住民税のお支払い額の把握</p>
+                    </div>
                 </div>
                 <div class="eighth_contents_21">
-                    <img src="img\レ点.png" alt="">
-                    <p>隠れた税金の計算式の理解</p>
+                    <img src="img\レ点.png">
+                    <div class="eighth_wrap">
+                        <p>隠れた税金の計算式の理解</p>
+                    </div>
                 </div>
                 <div class="eighth_contents_21">
-                    <img src="img\レ点.png" alt="">
-                    <p>総合課税という日本の税制度から<span class="sp_break_88"></span>会社員でも活用できる節税方法の検討</p>
+                    <img src="img\レ点.png">
+                    <div class="eighth_wrap">
+                        <p>総合課税という日本の税制度から<span class="sp_break_88"></span>会社員でも<span class="sp_break_881"></span>活用できる節税方法の検討</p>
+                    </div>
                 </div>
             </div>
             <p class="eighth_contents_3">これらを一緒に学んでいきます。<span class="sp_break_83 sp_break_831"></span>節税などの【仕組み】を活用して<span class="sp_break_84"></span>支出を減らすことで、<span class="sp_break_87"></span>最終的に投資を行った際、<span class="sp_break_83 sp_break_832"></span>万が一損失が出たとしても、<span class="sp_break_83"></span>もともと手元にあったお金ではなく、<span class="sp_break_85"></span>税金などで支出していたお金を利用しているため、<span class="sp_break_84"></span>リスクを大幅に低減できます。</p>
         </div>
+    </div>
+    <div class="nineth_section">
+        <div class="yellow-shape"></div>
+        <div class="nineth_contents">
+            <img src="img\22094530.png">
+            <div class="nineth_text">
+                <p>お金のプロが<br><span>解決</span>へ導きます！</p>
+            </div>  
+        </div>  
+        <div class="nineth_blocks">
+            <img src="img\資産形成.png">
+            <img src="img\家計見直し.png" >
+            <img src="img\節税.png" >
+            <img src="img\老後資金.png">
+            <img src="img\子どものための資金準備.png" >
+            <img src="img\増える知識.png">
+        </div>
+    </div>
+    <div class="tenth_section">
+
     </div>
 </body>
 </html>
