tenth-blockを左右に置くのはできたがサイズ調整がまだ

--- a/index.html
+++ b/index.html
@@ -174,7 +174,68 @@
         </div>
     </div>
     <div class="tenth_section">
-
+        <div class="tenth_title">
+            <p class="title_line"></p>
+            <p class="tenth_title_letter">講師のご紹介</p>
+            <p class="title_line"></p>
+        </div>
+        <div class="tenth_discription">
+            <div class="tenth_person">
+                <div class="tenth_name">
+                    <p>山添勇人<br><span>Achievement 経営者</span></p>
+                </div>
+                <p class="tenth_text">元SMBC日興証券に勤務。<span class="sp_break_10"></span>25歳で会社を設立し、3期目にして年商1億円突破。<span class="sp_break_10 sp_space_10"></span>講師の実績としましては、多くの公務員、MR、上場企業の方々に金融の幅広い知識をサポートしてきました。その教育を受け、サラリーマンから法人設立までに至った企業数は16社になります。<span class="sp_break_10"></span>また、上場企業にてセミナーを開催した実績もございます。</p>
+                <div class="tenth_subtitle">
+                    <p>webメディア出演</p>
+                </div>
+                <div class="tenth_link">
+                    <a href="https://www.kakugo.tv/person/detkfa5zb.html" class="tenth_subtext">”私のカクゴ”に出演</a>
+                </div>
+                <a href="https://www.kakugo.tv/person/detkfa5zb.html" class="tenth_img">
+                    <img src="img\スクリーンショット 2025-03-03 234356.png" alt="">
+                </a>
+            </div>
+            <div class="tenth_right_sp">
+                <div class="tenth_person_1">
+                    <div class="tenth_name">
+                        <p>福田勝己<br><span>株式会社Achievement</span></p>
+                    </div>
+                    <p class="tenth_text">大手コンサル会社やトヨタ自動車など大手企業で経験を経て、現在はファイナンシャルプランナーとして活躍。<span class="sp_break_10"></span>問題の発見、調査、分析から問題解決へ導き、確かなエビデンスを固めて最良なご提案をすることを得意とします。<span class="sp_break_10"></span>特に会社員の方からご好評頂き、延べ1,000人以上の方のコンサル実績がございます。</p>
+                </div>
+                <div class="tenth_person">
+                    <div class="tenth_name">
+                        <p>田中雅代<br><span>株式会社Toward</span></p>
+                    </div>
+                    <p class="tenth_text">前職に予備校で勤務し、金融とは違う世界にいたことを活かした提案力で、現在は株式会社Towardのファイナンシャルプランナーとして活躍。</p>
+                </div>
+                <div class="tenth_person">
+                    <div class="tenth_name">
+                        <p>石橋翔大<br><span>株式会社L.D.A</span></p>
+                    </div>
+                    <p class="tenth_text">某大手ホストクラブグループでNo.1と代表を経験した過去を持つ。2018年、FPとして事業をスタートし、1年ほどで会社を設立。</p>
+                </div>
+            </div>
+            <div class="tenth_right_pc">
+                <div class="tenth_person">
+                    <div class="tenth_name">
+                        <p>福田勝己<br><span>株式会社Achievement</span></p>
+                    </div>
+                    <p class="tenth_text">大手コンサル会社やトヨタ自動車など大手企業で経験を経て、現在はファイナンシャルプランナーとして活躍。<span class="sp_break_10"></span>問題の発見、調査、分析から問題解決へ導き、確かなエビデンスを固めて最良なご提案をすることを得意とします。<span class="sp_break_10"></span>特に会社員の方からご好評頂き、延べ1,000人以上の方のコンサル実績がございます。</p>
+                </div>
+                <div class="tenth_person">
+                    <div class="tenth_name">
+                        <p>田中雅代<br><span>株式会社Toward</span></p>
+                    </div>
+                    <p class="tenth_text">前職に予備校で勤務し、金融とは違う世界にいたことを活かした提案力で、現在は株式会社Towardのファイナンシャルプランナーとして活躍。</p>
+                </div>
+                <div class="tenth_person">
+                    <div class="tenth_name">
+                        <p>石橋翔大<br><span>株式会社L.D.A</span></p>
+                    </div>
+                    <p class="tenth_text">某大手ホストクラブグループでNo.1と代表を経験した過去を持つ。2018年、FPとして事業をスタートし、1年ほどで会社を設立。</p>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
