--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             <p class="title_line"></p>
         </div>
         <div class="tenth_discription">
-            <div class="tenth_person">
+            <div class="tenth_person_0">
                 <div class="tenth_name">
                     <p>山添勇人<br><span>Achievement 経営者</span></p>
                 </div>
@@ -220,7 +220,7 @@
                     <div class="tenth_name">
                         <p>福田勝己<br><span>株式会社Achievement</span></p>
                     </div>
-                    <p class="tenth_text">大手コンサル会社やトヨタ自動車など大手企業で経験を経て、現在はファイナンシャルプランナーとして活躍。<span class="sp_break_10"></span>問題の発見、調査、分析から問題解決へ導き、確かなエビデンスを固めて最良なご提案をすることを得意とします。<span class="sp_break_10"></span>特に会社員の方からご好評頂き、延べ1,000人以上の方のコンサル実績がございます。</p>
+                    <p class="tenth_text">大手コンサル会社やトヨタ自動車など大手企業で経験を経て、現在はファイナンシャルプランナーとして活躍。<span class="sp_break_10 sp_space_101"></span>問題の発見、調査、分析から問題解決へ導き、確かなエビデンスを固めて最良なご提案をすることを得意とします。<span class="sp_break_10"></span>特に会社員の方からご好評頂き、延べ1,000人以上の方のコンサル実績がございます。</p>
                 </div>
                 <div class="tenth_person">
                     <div class="tenth_name">
@@ -237,5 +237,15 @@
             </div>
         </div>
     </div>
+    <footer>
+        <div class="yellowback"></div>
+        <div class="footer_title">
+            <p>「なんとなく不安」を<span class="sp_break_11"></span>「具体的な対策」へ。<span class="sp_break_11"></span>今の状況を一緒に<span class="footer_highlight">見える化</span>して、<span class="sp_break_11"></span>最適なプランを作りましょう。</p>
+        </div>
+        <div class="footer_img">
+            <img src="img\24663615.png" class="footer_img_0">
+            <img src="img\22062842.png" class="footer_img_1">
+        </div>
+    </footer>
 </body>
 </html>
