--- a/index.html
+++ b/index.html
@@ -239,12 +239,24 @@
     </div>
     <footer>
         <div class="yellowback"></div>
-        <div class="footer_title">
-            <p>「なんとなく不安」を<span class="sp_break_11"></span>「具体的な対策」へ。<span class="sp_break_11"></span>今の状況を一緒に<span class="footer_highlight">見える化</span>して、<span class="sp_break_11"></span>最適なプランを作りましょう。</p>
+        <div class="footer_contents">
+            <div class="footer_title">
+                <p>「なんとなく不安」を<span class="sp_break_11"></span>「具体的な対策」へ。<span class="sp_break_110"></span>今の状況を一緒に<span class="footer_highlight">見える化</span>して、<span class="sp_break_111"></span>最適なプランを作りましょう。</p>
+            </div>
+            <div class="footer_img">
+                <img src="img\24663615.png" class="footer_img_0">
+                <img src="img\22062842.png" class="footer_img_1">
+            </div>
         </div>
-        <div class="footer_img">
-            <img src="img\24663615.png" class="footer_img_0">
-            <img src="img\22062842.png" class="footer_img_1">
+        <div class="footer_btn">
+            <div class="footer_belt">   
+                <img src="img\border_a.png">
+                <div class="CTA_btn">
+                    <a href="" class="CTA_btn_letter">
+                        無料個別相談のご予約はこちら
+                    </a>
+                </div>
+            </div>
         </div>
     </footer>
 </body>
