--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="second_belt">
             <img src="img\border_a.png" alt="">
             <div class="CTA_btn">
-                <a href="" class="CTA_btn_letter">
+                <a href="https://line.me/R/ti/p/@507cchwf" class="CTA_btn_letter">
                     無料個別相談のご予約はこちら
                 </a>
             </div>
@@ -90,7 +90,7 @@
             </div>
             <img src="img\border_a.png" alt="">
             <div class="fifth_btn CTA_btn">
-                <a href="" class="CTA_btn_letter">
+                <a href="https://line.me/R/ti/p/@507cchwf" class="CTA_btn_letter">
                     無料個別相談のご予約はこちら
                 </a>
             </div>
@@ -252,7 +252,7 @@
             <div class="footer_belt">   
                 <img src="img\border_a.png">
                 <div class="CTA_btn">
-                    <a href="" class="CTA_btn_letter">
+                    <a href="https://line.me/R/ti/p/@507cchwf" class="CTA_btn_letter">
                         無料個別相談のご予約はこちら
                     </a>
                 </div>
