btnのずれなおした

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <p>ご相談では、あなたのライフプランや<span class="sp_break_52"></span>ご希望に沿って、<span class="sp_break_51"></span>不足額を一緒に計算し、<span class="sp_break_52"></span>具体的な資産形成プランをご提案します。</p>
             </div>
             <img src="img\border_a.png" alt="">
-            <div class="fifth_btn CTA_btn">
+            <div class="fifth_btn">
                 <a href="https://line.me/R/ti/p/@507cchwf" class="CTA_btn_letter">
                     無料個別相談のご予約はこちら
                 </a>
