依頼された改行なおした

--- a/index.html
+++ b/index.html
@@ -153,7 +153,8 @@
                     </div>
                 </div>
             </div>
-            <p class="eighth_contents_3">これらを一緒に学んでいきます。<span class="sp_break_83 sp_break_831"></span>節税などの【仕組み】を活用して<span class="sp_break_84"></span>支出を減らすことで、<span class="sp_break_87"></span>最終的に投資を行った際、<span class="sp_break_83 sp_break_832"></span>万が一損失が出たとしても、<span class="sp_break_83"></span>もともと手元にあったお金ではなく、<span class="sp_break_85"></span>税金などで支出していたお金を利用しているため、<span class="sp_break_84"></span>リスクを大幅に低減できます。</p>
+            <p class="eighth_contents_3">これらを一緒に学んでいきます。<span class="sp_break_83 sp_break_831"></span>節税などの【仕組み】を活用して<span class="sp_break_84"></span>支出を減らすことで、
+                <span class="sp_break_87"></span>最終的に投資を行った際、<span class="sp_break_83 sp_break_832"></span>万が一損失が出たとしても、<span class="sp_break_83"></span>もともと手元にあったお金ではなく、<span class="sp_break_85"></span>税金などで支出していたお金を利用しているため、<span class="                                                "></span>リスクを大幅に低減できます。</p>
         </div>
     </div>
     <div class="nineth_section">
@@ -184,7 +185,7 @@
                 <div class="tenth_name">
                     <p>山添勇人<br><span>Achievement 経営者</span></p>
                 </div>
-                <p class="tenth_text">元SMBC日興証券に勤務。<span class="sp_break_10"></span>25歳で会社を設立し、3期目にして年商1億円突破。<span class="sp_break_10 sp_space_10"></span>講師の実績としましては、多くの公務員、MR、上場企業の方々に金融の幅広い知識をサポートしてきました。その教育を受け、サラリーマンから法人設立までに至った企業数は16社になります。<span class="sp_break_10"></span>また、上場企業にてセミナーを開催した実績もございます。</p>
+                <p class="tenth_text">元SMBC日興証券に勤務。<br>25歳で会社を設立し、<span class="sp_break_100"></span> 3期目にして年商1億円突破。<span class="sp_space_10"><br></span><br>講師の実績としましては、多くの公務員、MR、上場企業の方々に金融の幅広い知識をサポートしてきました。その教育を受け、サラリーマンから法人設立までに至った企業数は16社になります。<span class="sp_break_10"></span>また、上場企業にてセミナーを開催した実績もございます。</p>
                 <div class="tenth_subtitle">
                     <p>webメディア出演</p>
                 </div>
@@ -200,7 +201,7 @@
                     <div class="tenth_name">
                         <p>福田勝己<br><span>株式会社Achievement</span></p>
                     </div>
-                    <p class="tenth_text">大手コンサル会社やトヨタ自動車など大手企業で経験を経て、現在はファイナンシャルプランナーとして活躍。<span class="sp_break_10"></span>問題の発見、調査、分析から問題解決へ導き、確かなエビデンスを固めて最良なご提案をすることを得意とします。<span class="sp_break_10"></span>特に会社員の方からご好評頂き、延べ1,000人以上の方のコンサル実績がございます。</p>
+                    <p class="tenth_text">大手コンサル会社やトヨタ自動車など大手企業で経験を経て、現在はファイナンシャルプランナーとして活躍。<span class="sp_break_101"></span>問題の発見、調査、分析から問題解決へ導き、確かなエビデンスを固めて最良なご提案をすることを得意とします。<span class="sp_break_101"></span>特に会社員の方からご好評頂き、延べ1,000人以上の方のコンサル実績がございます。</p>
                 </div>
                 <div class="tenth_person">
                     <div class="tenth_name">
@@ -220,7 +221,7 @@
                     <div class="tenth_name">
                         <p>福田勝己<br><span>株式会社Achievement</span></p>
                     </div>
-                    <p class="tenth_text">大手コンサル会社やトヨタ自動車など大手企業で経験を経て、現在はファイナンシャルプランナーとして活躍。<span class="sp_break_10 sp_space_101"></span>問題の発見、調査、分析から問題解決へ導き、確かなエビデンスを固めて最良なご提案をすることを得意とします。<span class="sp_break_10"></span>特に会社員の方からご好評頂き、延べ1,000人以上の方のコンサル実績がございます。</p>
+                    <p class="tenth_text">大手コンサル会社やトヨタ自動車など大手企業で経験を経て、現在はファイナンシャルプランナーとして活躍。<span class="sp_break_10 sp_space_10"></span>問題の発見、調査、分析から問題解決へ導き、確かなエビデンスを固めて最良なご提案をすることを得意とします。<span class="sp_break_10"></span>特に会社員の方からご好評頂き、延べ1,000人以上の方のコンサル実績がございます。</p>
                 </div>
                 <div class="tenth_person">
                     <div class="tenth_name">
